--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.psd filter=lfs diff=lfs merge=lfs -text
 dist/JobOrganizer.exe filter=lfs diff=lfs merge=lfs -text
+JobOrganizer1.0.zip filter=lfs diff=lfs merge=lfs -text
